# Autonomous-mobile-robot-navigation-in-enviroment-with-humans

./: .gitignore  LICENSE  PROJECT_EXPLANATION.txt  README.md  urdf_check.rviz
docs/: DESIGN.md
src/delivery_bot_bringup/: package.xml  setup.py
src/delivery_bot_bringup/config/: mission.yaml
src/delivery_bot_bringup/delivery_bot_bringup/: delivery_manager.py  metrics_logger.py
src/delivery_bot_bringup/launch/: sim_bringup.launch.py
src/delivery_bot_description/: CMakeLists.txt  package.xml
src/delivery_bot_description/launch/: description.launch.py
src/delivery_bot_description/urdf/: delivery_bot.urdf.xacro  gazebo.xacro  macros.xacro
src/delivery_bot_gazebo/: CMakeLists.txt  package.xml
src/delivery_bot_gazebo/launch/: sim.launch.py
src/delivery_bot_gazebo/worlds/: warehouse.sdf
src/delivery_bot_navigation/: CMakeLists.txt  package.xml
src/delivery_bot_navigation/config/: nav2_params.yaml  slam_params.yaml
src/delivery_bot_navigation/launch/: nav.launch.py  slam.launch.py
src/delivery_bot_navigation/maps/: README.md  warehouse.pgm  warehouse.yaml
src/delivery_bot_navigation/rviz/: nav.rviz
src/pedestrian_sim/: package.xml  setup.py
src/pedestrian_sim/config/: pedestrians.yaml
src/pedestrian_sim/launch/: pedestrians.launch.py
src/pedestrian_sim/pedestrian_sim/: pedestrian_simulator.py
src/social_costmap_plugin/: CMakeLists.txt  package.xml  social_costmap_plugin.xml
src/social_costmap_plugin/include/social_costmap_plugin/: social_layer.hpp
src/social_costmap_plugin/src/: social_layer.cpp
src/social_nav_msgs/: CMakeLists.txt  package.xml
src/social_nav_msgs/msg/: Pedestrian.msg  Pedestrians.msg
