<?xml version="1.0"?>
<package format="3">
  <name>delivery_bot_navigation</name>
  <version>0.1.0</version>
  <description>
    SLAM (slam_toolbox) and Nav2 configuration + launch for delivery_bot,
    including the custom social_costmap_plugin wired into both costmaps.
  </description>
  <maintainer email="AshwinderPalSingh@users.noreply.github.com">AshwinderPalSingh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>social_costmap_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
